--- a/css/index2.css
+++ b/css/index2.css
@@ -5,7 +5,11 @@ body{
     background-color: aqua;
 }
 
-body > :nth-child(1){
+main{
+    background-image: url("../img/background.jpeg");
+}
+
+main > :nth-child(1){
     width: 780px; /*800 - 10 padding-left - 10 padding-right*/
     padding-left: 10px;
     padding-right: 10px;
@@ -16,7 +20,7 @@ body > :nth-child(1){
     float: left;
 }
 
-body > :nth-child(2){
+main > :nth-child(2){
     width: 340px; /*400 - 30 padding-left - 30 padding-right*/
     height: 350px;/*400 - 50 padding-top*/
     margin-left: 20px;
