--- a/css/index.css
+++ b/css/index.css
@@ -40,3 +40,12 @@ footer{
     background-color: yellow;
     clear: both;
 }
+
+form{
+    padding-left: 70px;
+}
+
+form > input[type="text"]{
+    size: 500px;
+    padding-left: 10px;
+}
