--- a/css/index2.css
+++ b/css/index2.css
@@ -49,7 +49,7 @@ form{
 }
 
 form > input{
-    display: block;
+    display: block; /* Hace con que los elemento tipo input de dentro del form tenga propriedades de elemento de bloque */
 }
 
 form > label{
