--- a/css/index.css
+++ b/css/index.css
@@ -49,6 +49,19 @@ form > input{
     display: block; /* Hace con que los elemento tipo input de dentro del form tenga propriedades de elemento de bloque */
 }
 
+form > input[type="submit"]{
+    width: 150px;
+    background-color: #D8D8D8;
+}
+
+form > input[type="text"]{
+    width: 500px;
+}
+
+form > input[type="email"]{
+    width: 500px;
+}
+
 form > label{
     color: white;
 }
